src/test/test-models/bad/break2.stan
// tests correct value passed from transformed parameters
transformed parameters {
  real y;
  break;
}
model {
}
